--- a/core/templates/core/component/footer.html
+++ b/core/templates/core/component/footer.html
@@ -24,6 +24,5 @@
             </ul>
         </div>
     </div>
-    <p class="copyright"> &copy; Copyright 2024 <a href="#">Mr-Analyzer</a><br>
-        Developer- Ctrl+shift+z </p>
+    <p class="copyright"> &copy; Copyright 2024 <a href="#">Mr-Analyzer</a></p>
 </footer>
