--- a/core/templates/core/partial/main-base.html
+++ b/core/templates/core/partial/main-base.html
@@ -5,8 +5,8 @@
 <head>
     {% include 'core/partial/main-style.html' %}
 
-    {% block stylecontent %}
-    {% endblock stylecontent %}
+    {% block appstylecontent %}
+    {% endblock appstylecontent %}
 </head>
 
 <body style="background-image: url(../../static/whatsapp/images/whatsappBack.png);">
@@ -21,6 +21,6 @@
 </body>
     {% include 'core/partial/main-script.html' %}
 
-    {% block scriptcontent %}
-    {% endblock scriptcontent %}
+    {% block appscriptcontent %}
+    {% endblock appscriptcontent %}
 </html>
