--- a/core/templates/core/app/index.html
+++ b/core/templates/core/app/index.html
@@ -42,7 +42,7 @@
 
     <div class="row">
         <div class="col-md-6">
-            <a href="{% url 'whatsapp:whatsapp' %}" style="text-decoration: none;">
+            <a href="{% url 'creditscore:credit' %}" style="text-decoration: none;">
                 <div class="card mb-3" style="width: 100%;">
                     <div class="row g-0">
                         <div class="col-md-4">
