--- a/rockmine/templates/rockmine/partial/style.html
+++ b/rockmine/templates/rockmine/partial/style.html
@@ -1,4 +1,4 @@
 {% load static %}
 {% block styleindex %}
-<link rel="stylesheet" href="{% static 'core/css/card.css' %}">
+<link rel="stylesheet" href="{% static 'core/css/index.css' %}">
 {% endblock styleindex %}
