updated whole rockmine

--- a/rockmine/templates/rockmine/partial/base.html
+++ b/rockmine/templates/rockmine/partial/base.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block appstylecontent %}
-  {% include 'core/partial/style.html' %}
+  {% include 'rockmine/partial/style.html' %}
 {% endblock appstylecontent %}
 
 {% block content %}
@@ -11,4 +11,5 @@
 {% endblock content %}
 
 {% block appscriptcontent %}
+  {% include 'rockmine/partial/script.html' %}
 {% endblock appscriptcontent %}
