--- a/rockmine/templates/rockmine/partial/style.html
+++ b/rockmine/templates/rockmine/partial/style.html
@@ -1,4 +1,7 @@
 {% load static %}
 {% block styleindex %}
-<link rel="stylesheet" href="{% static 'core/css/index.css' %}">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.63.0/codemirror.min.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.63.0/theme/material.min.css">
+<link rel="stylesheet" href="{% static 'rockmine/css/index.css' %}">
+<link rel="stylesheet" href="{% static 'rockmine/css/result.css' %}">
 {% endblock styleindex %}
