--- a/rockmine/static/rockmine/css/index.css
+++ b/rockmine/static/rockmine/css/index.css
@@ -1,9 +1,47 @@
 label{
+    display: none;
+}
+.lebelfor_info{
+    display: block;
+    color: #454545;
+    font-weight: 600;
+}
+#id_data{
+    width: 100%;
+    height: 100px;
+    background-color: transparent;
+    border: 2px solid rgb(207, 207, 207);
+    border-radius: 5px;
+    padding: 5px;
+}
+.copy-btn,
+.copy_btn,
+.check_btn{
+    background-color: transparent;
+    border: 1px solid rgb(207, 207, 207);
+    border-radius: 5px;
+    color: rgb(129, 129, 129);
+}
+.copy-btn:hover,
+.copy_btn:hover,
+.check_btn:hover{
+    background-color: rgb(207, 207, 207);
+    border: 1px solid #454545;
+    color: #454545;
+}
+label{
     color: #454545;
     font-weight: 700;
 }
-.copy_btn{
-    border: 1px solid rgb(212, 212, 212);
-    background-color: transparent;
-    border-radius: 10px;
+.testing_data{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+.testing_data pre{
+    overflow: hidden;
+    margin-bottom: 0;
 }
