--- a/rockmine/templates/rockmine/app/index.html
+++ b/rockmine/templates/rockmine/app/index.html
@@ -1,34 +1,48 @@
-{% extends 'core/partial/base.html' %}
+{% extends 'rockmine/partial/base.html' %}
 {% load static %}
 
 {% block index %}
-<style>
-    label{
-        display: none;
-    }
-    .lebelfor_info{
-        display: block;
-    }
-    #id_data{
-        width: 100%;
-        height: 100px;
-        background-color: transparent;
-        border: 2px solid rgb(207, 207, 207);
-    }
-</style>
+
 <div class="container flex justify-center">
     <form method="post">
         <label class="lebelfor_info">Input The Test Case from given TestCases</label>
         {% csrf_token %}
         {{ datform.as_p }}
-        <button type="submit">Check</button>
+        <button class="check_btn" type="submit">Check</button>
     </form>
-    <div class="testcases_array">
-        <ul>
-            <li>
-                <button class="copy_btn">copy</button>
-            </li>
-        </ul>
+    <br>
+    <h1>Testing Data Points</h1>
+    <div class="card">
+        <div class="card-body">
+            <h5 class="card-title">Copy-Friendly Testing Data</h5>
+            {% for test_result, test_data in testing_results|zip:testing_datapoints %}
+                <div class="testing_data py-2">
+                    <pre id="testingData{{ forloop.counter }}">{{ test_result }} -> {{ test_data }}&hellip;</pre>
+                    <button class="copy-btn mx-3" data-datapoint="{{ test_data }}">Copy</button>
+                </div>
+            {% endfor %}
+        </div>
     </div>
+    <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            const copyButtons = document.querySelectorAll('.copy-btn');
+            copyButtons.forEach(button => {
+                button.addEventListener('click', function () {
+                    const datapoint = this.getAttribute('data-datapoint');
+                    // Remove braces from the datapoint
+                    const cleanedDatapoint = datapoint.replace(/[\[\]']+/g, '');
+                    
+                    const textarea = document.createElement('textarea');
+                    textarea.value = cleanedDatapoint;
+                    document.body.appendChild(textarea);
+                    textarea.select();
+                    document.execCommand('copy');
+                    document.body.removeChild(textarea);
+                    alert('Copied: ' + cleanedDatapoint);
+                });
+            });
+        });
+    </script>
 </div>
+
 {% endblock index %}
