--- a/core/templates/core/app/index.html
+++ b/core/templates/core/app/index.html
@@ -13,7 +13,7 @@
                 <div class="card mb-3" style="width: 100%;">
                     <div class="row g-0">
                         <div class="col-md-4">
-                            <img  src="{% static 'core/images/whatsapp.png' %}" class="img-fluid rounded-start" alt="...">
+                            <img style="max-height: 200px;" src="{% static 'core/images/whatsapp.png' %}" class="img-fluid rounded-start" alt="...">
                         </div>
                         <div class="col-md-8">
                             <div class="card-body">
@@ -46,15 +46,17 @@
                 <div class="card mb-3" style="width: 100%;">
                     <div class="row g-0">
                         <div class="col-md-4">
-                            <img  src="{% static 'core/images/credit.png' %}" class="img-fluid rounded-start" alt="...">
+                            <img style="max-height: 200px;" src="{% static 'core/images/rockmine.png' %}" class="img-fluid rounded-start" alt="...">
                         </div>
                         <div class="col-md-8">
                             <div class="card-body">
-                                <h5 class="card-title">Credit Score Predictor</h5>
-                                <p class="card-text">Its a credit Score predictor using kaggle dataset of credit score with 1000 datapoints.</p>
+                                <h5 class="card-title">Rock Mine Predictor</h5>
+                                <p class="card-text">Sonar is a fascinating technology that allows us to explore and map the underwater world. Let’s dive into it!</p>
                                 <p class="card-text" style="display: flexbox;flex-wrap: wrap;">
                                     <div class="tech-used">Logistic regression</div>
                                     <div class="tech-used">ML prediction</div>
+                                    <div class="tech-used">Numpy</div>
+                                    <div class="tech-used">Pandas</div>
                                 </p>
                             </div>
                         </div>
