--- a/rockmine/templates/rockmine/app/index.html
+++ b/rockmine/templates/rockmine/app/index.html
@@ -15,7 +15,7 @@
     <div class="card">
         <div class="card-body">
             <h5 class="card-title">Copy-Friendly Testing Data</h5>
-            {% for test_result, test_data in testing_results|zip:testing_datapoints %}
+            {% for test_result, test_data in zipped_data %}
                 <div class="testing_data py-2">
                     <pre id="testingData{{ forloop.counter }}">{{ test_result }} -> {{ test_data }}&hellip;</pre>
                     <button class="copy-btn mx-3" data-datapoint="{{ test_data }}">Copy</button>
@@ -23,6 +23,7 @@
             {% endfor %}
         </div>
     </div>
+    <br>
     <script>
         document.addEventListener('DOMContentLoaded', function () {
             const copyButtons = document.querySelectorAll('.copy-btn');
