--- a/rockmine/templates/rockmine/app/result.html
+++ b/rockmine/templates/rockmine/app/result.html
@@ -31,7 +31,7 @@
                         <div style="display: flex;align-items: center;justify-content: left;gap: 10px;">
                             <span><b>Model code</b></span>
                         </div>
-<textarea id="codeSnippet">
+<textarea id="codeSnippet" style="height: 150px;">
 # importing dependies
 import numpy as np
 import pandas as pd
