initiated for the diabetes

--- a/core/templates/core/app/index.html
+++ b/core/templates/core/app/index.html
@@ -64,6 +64,29 @@
                 </div>
             </a>
         </div>
+        <div class="col-md-6">
+            <a href="{% url 'rockmine:rockmine' %}" style="text-decoration: none;">
+                <div class="card mb-3" style="width: 100%;">
+                    <div class="row g-0">
+                        <div class="col-md-4">
+                            <img style="max-height: 200px;" src="{% static 'core/images/diabetes.png' %}" class="img-fluid rounded-start" alt="...">
+                        </div>
+                        <div class="col-md-8">
+                            <div class="card-body">
+                                <h5 class="card-title">Female Diabetes Predictor</h5>
+                                <p class="card-text">The objective of the dataset is to predict whether or not a patient has diabetes,all patients here are females at least 21 years old of Pima Indian heritage.</p>
+                                <p class="card-text" style="display: flexbox;flex-wrap: wrap;">
+                                    <div class="tech-used">SVM Classifier</div>
+                                    <div class="tech-used">ML prediction</div>
+                                    <div class="tech-used">Numpy</div>
+                                    <div class="tech-used">Pandas</div>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </a>
+        </div>
     </div>
     <br>
 </div>
