backend of diabetes

--- a/core/templates/core/app/index.html
+++ b/core/templates/core/app/index.html
@@ -65,7 +65,7 @@
             </a>
         </div>
         <div class="col-md-6">
-            <a href="{% url 'rockmine:rockmine' %}" style="text-decoration: none;">
+            <a href="{% url 'diabetes:diabetes' %}" style="text-decoration: none;">
                 <div class="card mb-3" style="width: 100%;">
                     <div class="row g-0">
                         <div class="col-md-4">
