--- a/diabetes/templates/diabetes/partial/base.html
+++ b/diabetes/templates/diabetes/partial/base.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block appstylecontent %}
-  {% include 'rockmine/partial/style.html' %}
+  {% include 'diabetes/partial/style.html' %}
 {% endblock appstylecontent %}
 
 {% block content %}
@@ -11,5 +11,5 @@
 {% endblock content %}
 
 {% block appscriptcontent %}
-  {% include 'rockmine/partial/script.html' %}
+  {% include 'diabetes/partial/script.html' %}
 {% endblock appscriptcontent %}
