--- a/rockmine/templates/rockmine/app/result.html
+++ b/rockmine/templates/rockmine/app/result.html
@@ -71,6 +71,11 @@ def predicting_model(values):
         print("Its mine")
         return 0
 </textarea>
+<br>
+                    <div style="display: flex;align-items: center;justify-content: left;gap: 10px;">
+                        <span><b>Dataset Used</b></span>
+                    </div>
+                    <a href="{% static 'rockmine/dataset/rockmine.csv' %}" download>Download rockmine.csv</a>
                     </div>
                 </div>
             </div>
