--- a/diabetes/templates/diabetes/app/result.html
+++ b/diabetes/templates/diabetes/app/result.html
@@ -1,4 +1,4 @@
-{% extends 'rockmine/partial/base.html' %}
+{% extends 'diabetes/partial/base.html' %}
 {% load static %}
 
 {% block index %}
@@ -10,21 +10,20 @@
                 <div class="row">
                     <div class="col-md-5" style="overflow: hidden;">
                         {% if result_model %}
-                        <h3 class="card-title" style="text-align: center;">Ohhh!!! It's a Rock</h3>
+                        <h3 class="card-title" style="text-align: center;">Non-Diabetic "Relax"</h3>
                         {% else %}
-                        <h3 class="card-title" style="text-align: center;">Ohhh!!! It's a Mine</h3>
+                        <h3 class="card-title" style="text-align: center;">Ohhh!!! You are Diabetic</h3>
                         {% endif %}
 
                         {% if result_model %}
-                        <img class="img-fluid rounded-start" src="../../../static/rockmine/images/rock.gif" alt="">
+                        <img class="img-fluid rounded-start" src="../../../static/diabetes/images/non-diabetic.gif" alt="">
                         {% else %}
-                        <img class="img-fluid rounded-start" src="../../../static/rockmine/images/mine.gif" alt="">
+                        <img class="img-fluid rounded-start" src="../../../static/diabetes/images/diabetic.gif" alt="">
                         {% endif %}
                     </div>
                     <div class="col-md-7">
-                        <p>Sonar is a fascinating technology that allows us to explore and map the underwater world.
-                            Let’s dive into it!</p>
-                        <li>Model-Used : <b>Logistic Regression</b></li>
+                        <p>Diabetes mellitus is a metabolic disease that causes high blood sugar. It occurs when your body either doesn’t make enough insulin or can’t effectively use the insulin it makes.</p>
+                        <li>Model-Used : <b>SVM Classifier</b></li>
                         <li>Training Accuracy Score : <b>{{ training_score }}%</b></li>
                         <li>Testing Accuracy Score : <b>{{ testing_score }}%</b></li>
                         <br>
@@ -35,42 +34,84 @@
 # importing dependies
 import numpy as np
 import pandas as pd
+from sklearn.preprocessing import StandardScaler
 from sklearn.model_selection import train_test_split
-from sklearn.linear_model import LogisticRegression
+from sklearn import svm
 from sklearn.metrics import accuracy_score
 
 # createing dataframe from data
-sonar_df=pd.read_csv('rockmine/sonar_data.csv',header=None)
+diabetes_data=pd.read_csv('diabetes/diabetes.csv')
 
-# dividing dataframe into features and targets
-features=sonar_df.drop(columns=60,axis=1)
-targets=sonar_df[60]
+# seprating the features and targets
+features=diabetes_data.drop(columns='Outcome',axis=1)
+target=diabetes_data['Outcome']
 
-# train test split
-x_train,x_test,y_train,y_test=train_test_split(features,targets,stratify=targets,test_size=0.2,random_state=3)
+# standardizing the data
+scaler=StandardScaler()
+scaler.fit(features)
+standardized_data=scaler.transform(features)
 
-model=LogisticRegression()
-model.fit(x_train,y_train)
+X=standardized_data
+Y=diabetes_data['Outcome']
+
+# train and test
+x_train,x_test,y_train,y_test=train_test_split(X,Y,test_size=0.2,stratify=Y,random_state=2)
+
+# Traning the classifier using the train data
+classifier=svm.SVC(kernel='linear')
+classifier.fit(x_train,y_train)
+
+# accuracy on training moodel
+def training_accuracy_score():
+    x_train_prediction=classifier.predict(x_train)
+    training_data_accuracy=accuracy_score(y_train,x_train_prediction)
+    training_data_accuracy=round(training_data_accuracy*100,2)
+    return training_data_accuracy
+
+# accuracy on testing moodel
+def testing_accuracy_score():
+    x_test_prediction=classifier.predict(x_test)
+    testing_data_accuracy=accuracy_score(y_test,x_test_prediction)
+    testing_data_accuracy=round(testing_data_accuracy*100,2)
+    return testing_data_accuracy
+
+def testing_data_result():
+    y_test_np=np.asarray(y_test)
+    return y_test_np.tolist()
 
 def testing_data():
     x_test_np=np.asarray(x_test)
     return x_test_np.tolist()
 
 def predicting_model(values):
-    input_data = np.asarray(values)
-    input_data_as_np=np.asarray(input_data)
+    print(values)
+    input_data=(values)
 
-    input_data_reshaped=input_data_as_np.reshape(1,-1)
+    # change the input data to numpy array
+    input_data_as_numpy=np.asarray(input_data)
 
-    prediction = model.predict(input_data_reshaped)
+    # reshaping the numpy data
+    input_data_reshaped=input_data_as_numpy.reshape(1,-1)
 
-    if(prediction[0]=='R'):
-        print("Its rock")
-        return 1
-    else:
-        print("Its mine")
+    # standardizing the data
+    std_data=scaler.transform(input_data_reshaped)
+    print(std_data)
+
+    prediction=classifier.predict(std_data)
+    print(prediction)
+
+    if(prediction[0]==0):
+        print("Person is diabetics")
         return 0
+    else:
+        print("Person is not diabetic")
+        return 1    
 </textarea>
+<br>
+                    <div style="display: flex;align-items: center;justify-content: left;gap: 10px;">
+                        <span><b>Dataset Used</b></span>
+                    </div>
+                    <a href="{% static 'diabetes/dataset/diabetes.csv' %}" download>Download diabetes.csv</a>
                     </div>
                 </div>
             </div>
