--- a/diabetes/templates/diabetes/partial/style.html
+++ b/diabetes/templates/diabetes/partial/style.html
@@ -2,6 +2,6 @@
 {% block styleindex %}
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.63.0/codemirror.min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.63.0/theme/material.min.css">
-<link rel="stylesheet" href="{% static 'rockmine/css/index.css' %}">
-<link rel="stylesheet" href="{% static 'rockmine/css/result.css' %}">
+<link rel="stylesheet" href="{% static 'diabetes/css/index.css' %}">
+<link rel="stylesheet" href="{% static 'diabetes/css/result.css' %}">
 {% endblock styleindex %}
