--- a/core/templates/core/app/index.html
+++ b/core/templates/core/app/index.html
@@ -87,6 +87,29 @@
                 </div>
             </a>
         </div>
+        <div class="col-md-6">
+            <a href="{% url 'moviesystem:moviesystem' %}" style="text-decoration: none;">
+                <div class="card mb-3" style="width: 100%;">
+                    <div class="row g-0">
+                        <div class="col-md-4">
+                            <img style="max-height: 200px;" src="{% static 'core/images/moviesystem.png' %}" class="img-fluid rounded-start" alt="...">
+                        </div>
+                        <div class="col-md-8">
+                            <div class="card-body">
+                                <h5 class="card-title">Movies Recommendations</h5>
+                                <p class="card-text">Movie recommendation systems use algorithms to suggest films based on user preferences, offering personalized viewing choices.</p>
+                                <p class="card-text" style="display: flexbox;flex-wrap: wrap;">
+                                    <div class="tech-used">Cosine Similarity</div>
+                                    <div class="tech-used">TFID Vectorizer</div>
+                                    <div class="tech-used">Numpy</div>
+                                    <div class="tech-used">Pandas</div>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </a>
+        </div>
     </div>
     <br>
 </div>
