--- a/core/templates/core/component/navbar.html
+++ b/core/templates/core/component/navbar.html
@@ -1,14 +1,14 @@
 {% load static %}
 <nav class="navbar" style="background: transparent;">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#"><img src="../../static/whatsapp/images/logolight.png" width="180px" alt=""></a>
+        <a class="navbar-brand" href="#"><img class="logo-navbar" src="../../static/whatsapp/images/logolight.png" width="180px" alt=""></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar"
             aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
             <div class="offcanvas-header">
-                <h5 class="offcanvas-title" id="offcanvasNavbarLabel"><img
+                <h5 class="offcanvas-title" id="offcanvasNavbarLabel"><img class="logo-navbar"
                         src="../../static/whatsapp/images/logolight.png" width="180px" alt=""></h5>
                 <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
             </div>
