--- a/core/templates/core/component/footer.html
+++ b/core/templates/core/component/footer.html
@@ -1,7 +1,7 @@
 {% load static %}
 <hr style="padding: 0;margin: 0;">
 <footer>
-    <div class="container">
+    <div class="container" style="z-index: 1000;">
         <div class="wrapper">
             <a href="#" class="footer-logo"> <img src="{% static './whatsapp/images/logolight.png' %}"
                     alt="SimpleBlog Logo" width="150" class="logo-light"> </a>
@@ -24,5 +24,5 @@
             </ul>
         </div>
     </div>
-    <p class="copyright"> &copy; Copyright 2024 <a href="#">Mr-Analyzer</a></p>
+    <p class="copyright" style="margin-bottom: 0;"> &copy; Copyright 2024 <a href="#">Mr-Analyzer</a></p>
 </footer>
