--- a/moviesystem/templates/moviesystem/partial/style.html
+++ b/moviesystem/templates/moviesystem/partial/style.html
@@ -2,4 +2,5 @@
 {% block styleindex %}
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
 <link rel="stylesheet" href="{% static 'moviesystem/css/carousel.css' %}">
+<link rel="stylesheet" href="{% static 'moviesystem/css/search.css' %}">
 {% endblock styleindex %}
