--- a/moviesystem/templates/moviesystem/partial/style.html
+++ b/moviesystem/templates/moviesystem/partial/style.html
@@ -3,4 +3,6 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
 <link rel="stylesheet" href="{% static 'moviesystem/css/carousel.css' %}">
 <link rel="stylesheet" href="{% static 'moviesystem/css/search.css' %}">
+<link rel="stylesheet" href="{% static 'core/css/card.css' %}">
+<link rel="stylesheet" href="{% static 'moviesystem/css/result.css' %}">
 {% endblock styleindex %}
